--- a/ewanB/package.json
+++ b/ewanB/package.json
@@ -12,6 +12,9 @@
     "vite": "^5.1.6"
   },
   "dependencies": {
+    "express": "^4.19.1",
+    "ol": "^9.0.0",
+    "simplex-noise": "^4.0.1",
     "three": "^0.162.0"
   }
 }
