--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist" 
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^5.1.6"
   },
   "dependencies": {
     "express": "^4.19.1",
+    "gh-pages": "^6.1.1",
     "ol": "^9.0.0",
     "simplex-noise": "^4.0.1",
     "three": "^0.162.0"
